--- a/beautifulsoup_sandbox.ipynb
+++ b/beautifulsoup_sandbox.ipynb
@@ -10,10 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "soup = BeautifulSoup(page.content, 'html.parser')"
@@ -43,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "depts = ['Civil and Mechanical Engineering Technology', 'Engineering', 'Electronic Engineering Technology']"
@@ -77,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +104,7 @@
        "'default.cfm?fa=dspTopicDetails&thisTerm=201802&topicid=CMET&type=Credit'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,10 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "soup = BeautifulSoup(page.content, 'html.parser')"
@@ -146,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +147,7 @@
        "'CMET 121'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,27 +158,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMET 121\n",
+      "CMET 122\n",
+      "CMET 123\n",
+      "CMET 214\n",
+      "CMET 222\n",
+      "CMET 223\n",
+      "CMET 233\n",
+      "CMET 235\n",
+      "CMET 236\n",
+      "CMET 237\n"
+     ]
+    }
+   ],
    "source": [
     "class_lst=[]\n",
-    "for course in soup.dt:\n",
-    "    class_lst.append(course)"
+    "for course in soup.find_all('dt'):\n",
+    "    print(course.string)\n",
+    "    class_lst.append(course.string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CMET 121']"
+       "['CMET 121',\n",
+       " 'CMET 122',\n",
+       " 'CMET 123',\n",
+       " 'CMET 214',\n",
+       " 'CMET 222',\n",
+       " 'CMET 223',\n",
+       " 'CMET 233',\n",
+       " 'CMET 235',\n",
+       " 'CMET 236',\n",
+       " 'CMET 237']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
