progress on webscrape

--- a/beautifulsoup_sandbox.ipynb
+++ b/beautifulsoup_sandbox.ipynb
@@ -353,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "td_lst = table.find_all(\"td\")"
@@ -362,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for td in td_lst:\n",
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +453,7 @@
        " 'Sylvania  Campus / AM / 105']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +482,7 @@
        " '01:00 PM-03:50 PM']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -506,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -517,11 +521,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "course_sec_dict['ID']=\"\".join([CRN_lst[0],'-00'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ID': '20240-00'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course_sec_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "course_sec_dict['CRN']=CRN_lst[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CRN': '20240', 'ID': '20240-00'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course_sec_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'09:00 AM-11:50 AM'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_str = time_lst[0]\n",
+    "time_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'09:00 AM'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_time = time_str.split('-')[0]\n",
+    "start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11:50 AM'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end_time = time_str.split('-')[1]\n",
+    "end_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "course_sec_dict['start_time']=time_lst[0].split('-')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "course_sec_dict['end_time']=time_lst[0].split('-')[1]"
    ]
   },
   {
@@ -532,7 +674,10 @@
     {
      "data": {
       "text/plain": [
-       "{'ID': '20240-00'}"
+       "{'CRN': '20240',\n",
+       " 'ID': '20240-00',\n",
+       " 'end_time': '11:50 AM',\n",
+       " 'start_time': '09:00 AM'}"
       ]
      },
      "execution_count": 39,
@@ -547,145 +692,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "course_sec_dict['CRN']=CRN_lst[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CRN': '20240', 'ID': '20240-00'}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "course_sec_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'09:00 AM-11:50 AM'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time_str = time_lst[0]\n",
-    "time_str"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'09:00 AM'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "start_time = time_str.split('-')[0]\n",
-    "start_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'11:50 AM'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "end_time = time_str.split('-')[1]\n",
-    "end_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "course_sec_dict['start_time']=time_lst[0].split('-')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "course_sec_dict['end_time']=time_lst[0].split('-')[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CRN': '20240',\n",
-       " 'ID': '20240-00',\n",
-       " 'end_time': '11:50 AM',\n",
-       " 'start_time': '09:00 AM'}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "course_sec_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +700,7 @@
        "['M', 'W', 'M', 'F']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -721,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +740,7 @@
        " 'start_time': '09:00 AM'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +763,7 @@
        " 'Peter  Kazarinoff']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,8 +779,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "course_sec_dict['instructor'] = instr_lst[0].strip()"
@@ -782,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +804,7 @@
        " 'start_time': '09:00 AM'}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +827,7 @@
        " 'Sylvania  Campus / AM / 105']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +853,7 @@
        " 'start_time': '09:00 AM'}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +881,7 @@
        " 'start_time': '09:00 AM'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,11 +893,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "class CourseSection():\n",
+    "class InstrSect():\n",
     "    def __init__(self):\n",
     "        self.ID=''\n",
     "        self.CRN=''\n",
@@ -912,18 +922,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "CMET235_01=CourseSection()"
+    "CMET235_01=InstrSect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +942,7 @@
        "''"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -954,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +973,7 @@
        "'20240-00'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,15 +984,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CMET235_01.CRN=course_sec_dict['CRN']\n",
     "CMET235_01.building=course_sec_dict['building']\n",
     "CMET235_01.day=course_sec_dict['day']\n",
     "CMET235_01.start_time=course_sec_dict['start_time']\n",
-    "CMET235_01.end_time=course_sec_dict['end_time']"
+    "CMET235_01.end_time=course_sec_dict['end_time']\n",
+    "CMET235_01.start_date='02-Apr-2018'\n",
+    "CMET235_01.end_date='11-Jun-2018'\n",
+    "CMET235_01.fees='$18.00'"
    ]
   },
   {
@@ -1051,6 +1066,174 @@
     "    #if \"Instructor: \" in td.text.strip():\n",
     "        #instr_lst.append(td.text.strip().rstrip().lstrip().split('\\n')[0].strip('Instructor: '))\n",
     "#instr_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tr>\n",
+      "<th>CRN</th>\n",
+      "<th>Campus / Bldg / Rm</th>\n",
+      "<th>Time</th>\n",
+      "<th>Days</th>\n",
+      "<th>Dates</th>\n",
+      "<th>Materials</th>\n",
+      "</tr>\n",
+      "<tr class=\"space-row\"><td colspan=\"7\"> </td></tr>\n",
+      "<tr class=\"data-row \">\n",
+      "<td>20240</td>\n",
+      "<td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+      "\t\t\t\t\t\t\t</td>\n",
+      "<td>09:00 AM-11:50 AM</td>\n",
+      "<td><acronym title=\"Monday \">M</acronym></td>\n",
+      "<td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+      "<td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+      "</tr>\n",
+      "<tr class=\"info-row \">\n",
+      "<td>\n",
+      "</td>\n",
+      "<td colspan=\"4\">\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+      "<br/>\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+      "\t\t\t\t\t\t\t\t<br/>\n",
+      "</td>\n",
+      "</tr>\n",
+      "<tr class=\"data-row \">\n",
+      "<td>and</td>\n",
+      "<td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+      "\t\t\t\t\t\t\t</td>\n",
+      "<td>09:00 AM-11:50 AM</td>\n",
+      "<td><acronym title=\"Wednesday \">W</acronym></td>\n",
+      "<td>04-Apr-2018 thru 13-Jun-2018</td>\n",
+      "<td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+      "</tr>\n",
+      "<tr class=\"info-row \">\n",
+      "<td>\n",
+      "</td>\n",
+      "<td colspan=\"4\">\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+      "<br/>\n",
+      "</td>\n",
+      "</tr>\n",
+      "<tr class=\"space-row\"><td colspan=\"7\"> </td></tr>\n",
+      "<tr class=\"data-row alt-color\">\n",
+      "<td>25728</td>\n",
+      "<td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+      "\t\t\t\t\t\t\t</td>\n",
+      "<td>09:00 AM-11:50 AM</td>\n",
+      "<td><acronym title=\"Monday \">M</acronym></td>\n",
+      "<td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+      "<td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+      "</tr>\n",
+      "<tr class=\"info-row alt-color\">\n",
+      "<td>\n",
+      "</td>\n",
+      "<td colspan=\"4\">\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+      "<br/>\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+      "\t\t\t\t\t\t\t\t<br/>\n",
+      "</td>\n",
+      "</tr>\n",
+      "<tr class=\"data-row alt-color\">\n",
+      "<td>and</td>\n",
+      "<td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+      "\t\t\t\t\t\t\t</td>\n",
+      "<td>01:00 PM-03:50 PM</td>\n",
+      "<td><acronym title=\"Friday \">F</acronym></td>\n",
+      "<td>06-Apr-2018 thru 15-Jun-2018</td>\n",
+      "<td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+      "</tr>\n",
+      "<tr class=\"info-row alt-color\">\n",
+      "<td>\n",
+      "</td>\n",
+      "<td colspan=\"4\">\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+      "<br/>\n",
+      "</td>\n",
+      "</tr>\n",
+      "<tr class=\"space-row space-bottom\"><td colspan=\"7\"> </td></tr>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tr_lst = table.find_all(\"tr\")\n",
+    "for row in tr_lst:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "and\n",
+      " Sylvania  Campus / AM / 105 \n",
+      "\t\t\t\t\t\t\t\n",
+      "01:00 PM-03:50 PM\n",
+      "F\n",
+      "06-Apr-2018 thru 15-Jun-2018\n",
+      "Textbooks for CRN 25728 < $40\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: Peter  Kazarinoff\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## This works, need to pair rows so that:\n",
+    "#Intr sect 1\n",
+    "#<data-row>\n",
+    "#<info-row>\n",
+    "\n",
+    "#Intr sect 2\n",
+    "#<data-row>\n",
+    "#<info-row>\n",
+    "\n",
+    "#Intr sect 3\n",
+    "#<data-row alt-color>\n",
+    "#<info-row alt-color>\n",
+    "\n",
+    "#Intr sect 4\n",
+    "#<data-row alt-color>\n",
+    "#<info-row alt-color>\n",
+    "\n",
+    "\n",
+    "rows = soup.findAll('tr', attrs={'class': ['data-row ','info-row ','data-row alt-color','info-row alt-color']})\n",
+    "#print(rows)\n",
+    "print(rows[6].text)\n",
+    "print(rows[7].text)"
    ]
   },
   {
