--- a/beautifulsoup_sandbox.ipynb
+++ b/beautifulsoup_sandbox.ipynb
@@ -352,6 +352,249 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<thead>\n",
+       " <tr>\n",
+       " <th>CRN</th>\n",
+       " <th>Campus / Bldg / Rm</th>\n",
+       " <th>Time</th>\n",
+       " <th>Days</th>\n",
+       " <th>Dates</th>\n",
+       " <th>Materials</th>\n",
+       " </tr>\n",
+       " </thead>, <tr>\n",
+       " <th>CRN</th>\n",
+       " <th>Campus / Bldg / Rm</th>\n",
+       " <th>Time</th>\n",
+       " <th>Days</th>\n",
+       " <th>Dates</th>\n",
+       " <th>Materials</th>\n",
+       " </tr>, <th>CRN</th>, <th>Campus / Bldg / Rm</th>, <th>Time</th>, <th>Days</th>, <th>Dates</th>, <th>Materials</th>, <tbody>\n",
+       " <tr class=\"space-row\"><td colspan=\"7\"> </td></tr>\n",
+       " <tr class=\"data-row \">\n",
+       " <td>20240</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Monday \">M</acronym></td>\n",
+       " <td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+       " </tr>\n",
+       " <tr class=\"info-row \">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>\n",
+       " </tr>\n",
+       " <tr class=\"data-row \">\n",
+       " <td>and</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Wednesday \">W</acronym></td>\n",
+       " <td>04-Apr-2018 thru 13-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+       " </tr>\n",
+       " <tr class=\"info-row \">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>\n",
+       " </tr>\n",
+       " <tr class=\"space-row\"><td colspan=\"7\"> </td></tr>\n",
+       " <tr class=\"data-row alt-color\">\n",
+       " <td>25728</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Monday \">M</acronym></td>\n",
+       " <td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+       " </tr>\n",
+       " <tr class=\"info-row alt-color\">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>\n",
+       " </tr>\n",
+       " <tr class=\"data-row alt-color\">\n",
+       " <td>and</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>01:00 PM-03:50 PM</td>\n",
+       " <td><acronym title=\"Friday \">F</acronym></td>\n",
+       " <td>06-Apr-2018 thru 15-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+       " </tr>\n",
+       " <tr class=\"info-row alt-color\">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>\n",
+       " </tr>\n",
+       " <tr class=\"space-row space-bottom\"><td colspan=\"7\"> </td></tr>\n",
+       " </tbody>, <tr class=\"space-row\"><td colspan=\"7\"> </td></tr>, <td colspan=\"7\"> </td>, <tr class=\"data-row \">\n",
+       " <td>20240</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Monday \">M</acronym></td>\n",
+       " <td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+       " </tr>, <td>20240</td>, <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>, <a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a>, <td>09:00 AM-11:50 AM</td>, <td><acronym title=\"Monday \">M</acronym></td>, <acronym title=\"Monday \">M</acronym>, <td>02-Apr-2018 thru 11-Jun-2018</td>, <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>, <a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a>, <span class=\"visually-hide\"> for CRN 20240</span>, <tr class=\"info-row \">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>\n",
+       " </tr>, <td>\n",
+       " </td>, <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>, <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>, <br/>, <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a>, <br/>, <tr class=\"data-row \">\n",
+       " <td>and</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Wednesday \">W</acronym></td>\n",
+       " <td>04-Apr-2018 thru 13-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>\n",
+       " </tr>, <td>and</td>, <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>, <a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a>, <td>09:00 AM-11:50 AM</td>, <td><acronym title=\"Wednesday \">W</acronym></td>, <acronym title=\"Wednesday \">W</acronym>, <td>04-Apr-2018 thru 13-Jun-2018</td>, <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a> &lt; $40</td>, <a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=20240\">Textbooks<span class=\"visually-hide\"> for CRN 20240</span></a>, <span class=\"visually-hide\"> for CRN 20240</span>, <tr class=\"info-row \">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>\n",
+       " </tr>, <td>\n",
+       " </td>, <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>, <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>, <br/>, <tr class=\"space-row\"><td colspan=\"7\"> </td></tr>, <td colspan=\"7\"> </td>, <tr class=\"data-row alt-color\">\n",
+       " <td>25728</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>09:00 AM-11:50 AM</td>\n",
+       " <td><acronym title=\"Monday \">M</acronym></td>\n",
+       " <td>02-Apr-2018 thru 11-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+       " </tr>, <td>25728</td>, <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>, <a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a>, <td>09:00 AM-11:50 AM</td>, <td><acronym title=\"Monday \">M</acronym></td>, <acronym title=\"Monday \">M</acronym>, <td>02-Apr-2018 thru 11-Jun-2018</td>, <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>, <a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a>, <span class=\"visually-hide\"> for CRN 25728</span>, <tr class=\"info-row alt-color\">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>\n",
+       " </tr>, <td>\n",
+       " </td>, <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $18.00\n",
+       " \t\t\t\t\t\t\t\t<br/>\n",
+       " </td>, <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>, <br/>, <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a>, <br/>, <tr class=\"data-row alt-color\">\n",
+       " <td>and</td>\n",
+       " <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>\n",
+       " <td>01:00 PM-03:50 PM</td>\n",
+       " <td><acronym title=\"Friday \">F</acronym></td>\n",
+       " <td>06-Apr-2018 thru 15-Jun-2018</td>\n",
+       " <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>\n",
+       " </tr>, <td>and</td>, <td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a> / 105 \n",
+       " \t\t\t\t\t\t\t</td>, <a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=AM\"> Sylvania  Campus / AM</a>, <td>01:00 PM-03:50 PM</td>, <td><acronym title=\"Friday \">F</acronym></td>, <acronym title=\"Friday \">F</acronym>, <td>06-Apr-2018 thru 15-Jun-2018</td>, <td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a> &lt; $40</td>, <a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Spring 18&amp;cid=25728\">Textbooks<span class=\"visually-hide\"> for CRN 25728</span></a>, <span class=\"visually-hide\"> for CRN 25728</span>, <tr class=\"info-row alt-color\">\n",
+       " <td>\n",
+       " </td>\n",
+       " <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>\n",
+       " </tr>, <td>\n",
+       " </td>, <td colspan=\"4\">\n",
+       " \t\t\t\t\t\t\t\t\n",
+       " \t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>\n",
+       " <br/>\n",
+       " </td>, <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=peter%2Ekazarinoff%40pcc%2Eedu\">Peter  Kazarinoff</a>, <br/>, <tr class=\"space-row space-bottom\"><td colspan=\"7\"> </td></tr>, <td colspan=\"7\"> </td>]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "collapsed": true
@@ -359,6 +602,58 @@
    "outputs": [],
    "source": [
     "td_lst = table.find_all(\"td\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import bs4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class courseTable(bs4.element.Tag):\n",
+    "    def __init__(self,bs4elementtage):\n",
+    "        self.contents = bs4elementtage\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coursetableobject = courseTable(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.courseTable"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(coursetableobject)"
    ]
   },
   {
@@ -1262,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
